# Zinnia

./: .env.example  .gitignore  CHANGELOG.md  README.md  build-setup.md  eslint.config.js  package-lock.json  package.json  run.rosie.chrysanthemum.desktop  run.rosie.chrysanthemum.metainfo.xml  run.rosie.chrysanthemum.yml  run.rosie.zinnia.desktop  run.rosie.zinnia.metainfo.xml  run.rosie.zinnia.yml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml
.github/workflows/: ci.yml  release-gate.yml  release.yml
assets/: 7ZIP_LICENSE.txt
scripts/: dist-tools.js  generate-cargo-licenses.js  git-prune-local-branches.js  gpg-sign.js  mac-keychain-ssh.sh  post-release-assets.js  prepare-7z.js  release-warning.js  run-ts-tests.ts  sync-version.js  test-all.js  update-metainfo.js  vi.js  zip-macos.js
src/: archive-rules.ts  archive.ts  basic-mode.css  basic-ui.ts  browse-model.ts  compression-security.ts  extract-path.ts  extract-window.ts  extract.css  extract.html  files.ts  index.html  licenses.ts  main.css  main.ts  os-integration.ts  output-logging.ts  presets.ts  quick-actions.ts  selective-extract.ts  settings-model.ts  settings.ts  setup-wizard.ts  state.ts  style.css  ui.ts  updater.ts  utils.ts  variables.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  extract.json
src-tauri/icons/: icon.icns
src-tauri/linux/: desktop-template.hbs
src-tauri/src/: main.rs
src-tauri/windows/: nsis-hooks.nsh
src/tests/: archive-build-args.test.ts  archive-flow.test.ts  archive-helpers.test.ts  archive.test.ts  (+24 more)
